style(ContactForm): fix dark mode input borders
All input borders already have a 50% opacity applied to them in tailwind.config.ts,
and an extra "/ 50%" in styles/global.css under :dark was causing the border opacity
to break with hsl(var(--input) / 50% / 50%) and appear with full opacity instead. I
removed the extra "/ 50%", which was unnecessary.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -199,7 +199,7 @@
     --success: 142 70.6% 45.3%;
     --success-foreground: 210 40% 98%;
     --border: var(--gray-700);
-    --input: var(--gray-500) / 50%;
+    --input: var(--gray-500);
     --ring: 212.7 26.8% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
